Multiblock bug fixes.